Fixes explore Component Spacing Mobile

--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -181,6 +181,6 @@ $dark: #131e29;
     }
   }
   .explore {
-    bottom: 40px;
+    bottom: 65px;
   }
 }
