--- a/styles/SmallNav.module.scss
+++ b/styles/SmallNav.module.scss
@@ -3,8 +3,8 @@ $primary: #87f5c3;
 $secondary: #192633;
 
 .container {
-  height: 0px;
-  z-index: 0;
+  position: relative;
+  height: 0;
   a {
     display: flex;
     border-radius: 50%;
@@ -31,6 +31,9 @@ $secondary: #192633;
 }
 
 .menuToggle {
+  z-index: 1;
+
+  opacity: 1;
   display: flex;
   flex-direction: column;
   position: relative;
